* Updated the included translations.
* Extended capability handling methods for group and user objects with object and additional arguments.
* Refactored to access properties via methods.
* Fixed deprecated notice for null parameter when editing a group with no description.
* Fixed deprecated notice for null parameter when editing a capability with no description.

= 2.20.1 =
* WordPress 6.4 compatible.
* Fixes user counts per group all showing zero on the Users admin screen for the group filter.

= 2.20.0 =
* WordPress 6.4 compatible.
* Added compatibility plugin header fields.
* Added various missing code documentation.
* Fixed various code documentation formatting issues.
* Fixed several instances of missing documentation of return types.
* Removed bits of unused commented code.
* Revised update methods that do nothing.
* Adds support for the Navigation blocks, so that protected items are hidden from users who should not see them.
* Added filter to block_core_navigation_render_inner_blocks.
* Added filter to render_block and pre_render_block.
* Added the groups_post_access_filter_render_block filter.
* Added the groups_post_access_filter_pre_render_block filter.
* Added the groups_post_access_filter_block_core_navigation_render_inner_blocks filter.
* Fixed a PHP Deprecated notice on version_compare() when Groups is newly installed (PHP 8.x compatibility).
* Revised post count caching.
* Added the groups_user_is_member filter.
* Additions to API methods.
* Now updates the Categories widget post count to reflect the number of accessible posts for the viewing user, rendered as list or dropdown.
* Now updates the Categories block post count to reflect the number of accessible posts for the viewing user.
* Added the groups_post_access_filter_widget_categories_args filter.
* Added the groups_post_access_filter_widget_categories_dropdown_args filter.
* Added the groups_post_access_filter_get_terms filter.