@@ -165,8 +165,8 @@ class Groups_Admin_Posts {
 							apply_filters( 
 								'groups_admin_posts_restrict_manage_posts_get_groups_options', 
 								array( 'order_by' => 'name', 'order' => 'ASC' ) 
-							) 
-						) 
+							)
+						)
 					);
 					foreach( $groups as $group ) {
 						$selected = in_array( $group->group_id, $previous_selected ) ? ' selected="selected" ' : '';
