@@ -18,6 +18,9 @@
 * Refactored to access properties via methods.
 * Fixed deprecated notice for null parameter when editing a group with no description.
 * Fixed deprecated notice for null parameter when editing a capability with no description.
+* Fixed backslashes rendered for some quoted characters in group names rendered with the [groups_groups] shortcode, added missing escaping.
+* Fixed backslashes rendered for some quoted characters in group names rendered with the [groups_user_groups] shortcode, added missing escaping.
+* Fixed several instances of code format issues, superfluous whitespace.
 
 = 2.20.1 =
 * WordPress 6.4 compatible.
